<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="topMsg">Look at my GUI:</string>
    <string name="buttonMsg">CLICK HERE</string>
    <string name="checkBoxMsg">Check this out!</string>
    <string name="switchMsg">Switch on / off</string>
    <string name="textMsg">Type here</string>
    <string name="toast_message">Here is more information</string>
    <string name="switch_message">The switch is now</string>
    <string name="on">on</string>
    <string name="off"> off</string>
    <string name="undo">UNDO</string>
    <string name="lab3Msg1">Enter your email address: </string>
    <string name="lab3Msg2">Type email here </string>
    <string name="lab3Msg3">Type your password:  </string>
    <string name="lab3Msg4">LOGIN</string>
    <string name="lab3Msg5">Your profile</string>
    <string name="lab3Msg6">Your name: </string>
    <string name="lab3Msg7">Enter your name</string>
    <string name="lab3Msg8">Your email: </string>
    <string name="lab3Msg9">Enter your email</string>
    <string name="lab3Msg10">Your picture: </string>
    <string name="lab3Msg11">Click the button above to take a picture</string>
    <string name="lab4Msg1">Go to chat</string>
    <string name="lab4Msg2">SEND</string>
    <string name="lab4Msg3">RECEIVE</string>
    <string name="lab6Msg1">Weather Forecast</string>
    <string name="lab7Msg1">Message Here</string>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>