<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/linearLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lab3Msg1"
        android:textSize="30dp"/>

    <EditText android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lab3Msg2"
        android:inputType="textEmailAddress"
        android:textSize="28dp"/>

    <TextView android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lab3Msg3"
        android:textSize="30dp"/>

    <EditText android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="28dp"/>

    <Button android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/lab3Msg4" />

</LinearLayout>