<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/linearLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <TextView android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/topMsg"
        android:textSize="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/buttonMsg" />
        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:layout_weight="1"
            android:text="@string/checkBoxMsg" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:layout_weight="1"
            android:padding="0dp"
            android:src="@drawable/flag"/>
        <Switch android:id="@+id/switchID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switchMsg"/>
    </LinearLayout>

    <EditText android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textMsg"
        android:inputType="textCapWords"/>


</LinearLayout>