<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/relativeLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/topMsg"
        android:textSize="30sp"/>

    <Button android:id="@+id/button"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="0dp"
        android:text="@string/buttonMsg"
        android:textAlignment="center" />

    <CheckBox android:id="@+id/checkBox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/button"
        android:gravity="fill"
        android:text="@string/checkBoxMsg" />

    <ImageButton android:id="@+id/imageButton"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="fill"
        android:padding="0dp"
        android:src="@drawable/flag" />

    <Switch android:id="@+id/switchID"
        android:layout_below="@+id/button"
        android:layout_toRightOf="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switchMsg"/>

    <EditText android:id="@+id/editText"
        android:layout_below="@+id/imageButton"
        android:layout_alignParentStart="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textMsg"
        android:inputType="textCapWords" />
</RelativeLayout>